--- a/schedule.html
+++ b/schedule.html
@@ -1163,13 +1163,16 @@ href="https://nautil.us/how-eugenics-shaped-statistics-238014">Clayton
 </ul>
 <p>Lectures:</p>
 <ul>
-<li><p>Classes 4-5 (10/5 and 10/10) slides: <a
+<li>Classes 4-5 (10/5 and 10/10) slides: <a
 href="./slides/EDUC641_4_categrel.html">html</a> | <a
-href="./slides/EDUC641_4_categrel.pdf">pdf</a>
-<!-- - Class 6 (10/12) slides: [html](./slides/EDUC641_6_history.html) | [pdf](./slides/EDUC641_6_history.pdf)  --></p></li>
-<li><p>Data: <a href="./data/deathpenalty.csv">deathpenalty.csv</a> | <a
-href="./data/deathpenalty_codebook.pdf">codebook</a></p></li>
-<li><p>R code: <a href="./slides/EDUC641_4_code.R">R script</a></p></li>
+href="./slides/EDUC641_4_categrel.pdf">pdf</a></li>
+<li>Class 6 (10/12) slides: <a
+href="./slides/EDUC641_6_history.html">html</a> | <a
+href="./slides/EDUC641_6_history.pdf">pdf</a></li>
+<li>Data: <a href="./data/deathpenalty.csv">deathpenalty.csv</a> | <a
+href="./data/deathpenalty_codebook.pdf">codebook</a></li>
+<li>R code: <a href="./slides/EDUC641_4_code.R">R script</a></li>
+<li>Lab activities: <a href="./labs/Lab3.docx">doc</a></li>
 </ul>
 <p>Assignment 2:</p>
 <ul>
